--- a/login.css
+++ b/login.css
@@ -62,6 +62,7 @@ img {
 	flex-direction: column;
 }
 
+/* Use of Descendant Selector */
 .input-group input:first-child {
 	margin-bottom: 10px;
 }
@@ -85,41 +86,38 @@ input:hover {
 	margin: 20px 0;
 }
 
-button {
+/* Use of Class Selector */
+.btn-group a {
 	width: 50%;
-	font-size: 16px;
-	padding: 15px;
 	border-radius: 5px;
-	border: 1px solid #1b9fd8;
-	cursor: pointer;
-	background-color: #1b9fd8;
-}
-
-/* Use of class selector */
-.btn-group button:first-child {
-	margin-right: 2px;
-}
-
-/* Use of pseudo-class */
-button:hover {
-	background-color: #20bdff;
-}
-
-/* Use of an ID selector */
-#btn-text {
-	font-size: 16px;
-	color: #ffffff;
+	border: none;
 	text-decoration: none;
 }
 
 /* Use of Descendant Selector */
-footer a {
+.btn-group a input {
+	width: 100%;
+	height: 100%;
+	font-size: 16px;
+	cursor: pointer;
+	color: #ffffff;
+	text-align: center;
+	background-color: #1b9fd8;
+}
+
+/* Use of pseudo-class */
+.btn-group a input:hover {
+	background-color: #20bdff;
+}
+
+/* Use of an ID selector */
+#footer-link-pswrd {
 	color: #1b9fd8;
 	font-size: 14px;
 	font-weight: 700;
 }
 
-a:hover {
+#footer-link-pswrd:hover {
 	color: #20bdff;
 }
 
