--- a/index.css
+++ b/index.css
@@ -1,3 +1,98 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 body {
+    font-family: 'Nunito', sans-serif;
     background-color: dodgerblue;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: auto;
+}
+
+main {
+    margin: 0 auto;
+    overflow: auto;
+    width: 80%;
+    height: 100%;
+    background-color: white;
+}
+
+.post {
+    display: block;
+    width: 80%;
+    padding: 10px 0;
+    margin: 70px auto;
+    border-radius: 15px;
+    box-shadow: 0 0 20px gray;
+}
+
+.post-top {
+    padding:0 10px 30px;
+}
+
+.post-top img {
+    float: left;
+    width: 40px;
+    border-radius: 100%;
+}
+
+.time {
+    width: 100%;
+    font-size: 16px;
+    color: gray;
+    text-align: end;
+}
+
+.post video, img {
+    width: 100%;
+}
+
+.post p {
+    font-size: 24px;
+    font-weight: bold;
+    width: 95%;
+    margin: 20px 10px 40px;
+}
+
+.like{
+    display: inline-block;
+    width: auto;
+    margin-left: 10px;
+}
+
+.like-button{
+    width: 70px;
+    height: 50px;
+    padding: 0;
+
+    border-radius: 15px;
+    background-color: #e4eff8;
+}
+
+.like-button input {
+    width: 100%;
+    height: 100%;
+
+    outline: none;
+    border-radius: 15px;
+    border: 1px solid #e4eff8;
+    background: url('res/media/like.png') no-repeat center;
+    background-size: 50%;
+}
+
+.like-button:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.like-button:hover {
+    background-color: #7fdaff;
+}
+
+.like-counter{
+    font-size: 16px;
+    margin: auto;
+    text-align: center;
 }
