--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body {
     height: 50px;
     padding: 0;
 
+
+
 }
 
 .feed-noneneed {
@@ -49,6 +51,11 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 5px;
+    border-radius: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #ffffff;
 
 
 }
@@ -68,19 +75,20 @@ header img.profile {
 
 }
 
-.search-container {
-    border: #dcdcdc;
-    border: 1px;
+.search-container{
+    border: 2px;
 
 
 }
-
 .search-container input[type=text] {
     padding: 2px;
     margin-top: 5px;
     font-size: 20px;
     width: 400px;
     height: 40px;
+    border: thin solid gainsboro;;
+
+
 }
 
 .search-container button {
@@ -95,6 +103,7 @@ header img.profile {
     height: 40px;
     border-top-right-radius: 10%;
     border-bottom-right-radius: 10%;
+
 
 
 }
