--- a/res/css/login.css
+++ b/res/css/login.css
@@ -2,6 +2,7 @@
 
 body {
 	height: 100vh;
+	margin: 0;
 	font-family: 'Nunito', sans-serif;
 	background-color: dodgerblue;
 }
@@ -20,7 +21,7 @@ body {
 	text-align: center;
 	padding: 40px 15px 50px 15px;
 	border-radius: 5px;
-	background-color: #fff;
+	background-color: #ffffff;
 }
 
 h1,
