--- a/index.css
+++ b/index.css
@@ -17,9 +17,9 @@ html, body {
 }
 
 main {
-    margin: 0 auto;
+    margin: 120px auto 0px auto;
     overflow: auto;
-    width: 80%;
+    width: 60%;
     height: 100%;
     background-color: white;
 }
