--- a/res/css/index.css
+++ b/res/css/index.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+* {
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Nunito', sans-serif;
+    margin: 0;
     background-color: dodgerblue;
 }
 
@@ -12,9 +15,9 @@ html, body {
 }
 
 main {
-    margin: 0 auto;
+    margin: 120px auto 0px auto;
     overflow: auto;
-    width: 80%;
+    width: 60%;
     height: 100%;
     background-color: white;
 }
@@ -66,7 +69,6 @@ main {
     width: 70px;
     height: 50px;
     padding: 0;
-
     border-radius: 15px;
     background-color: #e4eff8;
 }
@@ -74,11 +76,10 @@ main {
 .like-button input {
     width: 100%;
     height: 100%;
-
     outline: none;
     border-radius: 15px;
     border: 1px solid #e4eff8;
-    background: url('../media/like.png') no-repeat center;
+    background: url('res/media/like.png') no-repeat center;
     background-size: 50%;
 }
 
@@ -95,4 +96,55 @@ main {
     font-size: 16px;
     margin: auto;
     text-align: center;
+}
+
+header {
+    width: 100%;
+    height: 120px;
+    padding: 0 30px;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #ffffff;
+}
+
+.img-logo, .img-profile {
+    width: 100px;
+    height: 100px;
+}
+
+.img-profile {
+    border-radius: 50%;
+}
+
+.search-container {
+    flex-basis: 60%;
+}
+
+.search-container input[type=text] {
+    width: 80%;
+    height: 80px;
+    padding: 20px;
+    font-size: 28px;
+    border: thin solid #dcdcdc;
+    background-color: rgb(245, 240, 240);
+}
+
+.search-container button {
+    width: 20%;
+    height: 80px;
+    padding: 4px;
+    font-size: 28px;
+    font-weight: 500;
+    float: right;
+    border: none;
+    color: #ffffff;
+    background-color: #1e90ff;
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+}
+
+.search-container button:hover {
+    background: rgb(0, 124, 248);
 }
