--- a/res/css/index.css
+++ b/res/css/index.css
@@ -1,28 +1,80 @@
-* {
-    box-sizing: border-box;
-}
-
-* {
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Heebo:400,700');
 
 body {
-    font-family: 'Nunito', sans-serif;
     margin: 0;
     background-color: dodgerblue;
 }
 
-html, body {
+html, body, main {
     height: 100%;
     margin: 0;
     overflow: auto;
 }
 
+* {
+    box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
+header {
+    width: 100%;
+    height: 60px;
+    padding: 0 30px;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 3;
+
+    background-color: #ffffff;
+}
+
+.search-container {
+    flex-basis: 50%;
+}
+
+.img-logo, .img-profile {
+    width: 40px;
+}
+
+.img-profile {
+    border-radius: 50%;
+}
+
+.search-container input[type=text] {
+    width: 85%;
+    height: 40px;
+    font-size: 14px;
+    border: thin solid #dcdcdc;
+    background-color: white;
+}
+
+.search-container button {
+    width: 15%;
+    height: 40px;
+    padding: 0;
+
+    font-size: 14px;
+    font-weight: 600;
+    float: right;
+    border: none;
+    color: #ffffff;
+    background-color: #1b9fd8;
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+}
+
+.search-container button:hover {
+    background: rgb(0, 124, 248);
+}
+
+
 main {
-    margin: 120px auto 0px auto;
-    overflow: auto;
     width: 60%;
-    height: 100%;
+    margin: auto;
+    padding-top: 100px;
     background-color: white;
 }
 
@@ -30,7 +82,7 @@ main {
     display: block;
     width: 80%;
     padding: 10px 0;
-    margin: 70px auto;
+    margin: 30px auto;
     border-radius: 15px;
     box-shadow: 0 0 20px gray;
 }
@@ -39,10 +91,8 @@ main {
     padding: 0 10px 30px;
 }
 
-.post-top img {
+.post-top .img-profile {
     float: left;
-    width: 40px;
-    border-radius: 100%;
 }
 
 .time {
@@ -53,12 +103,13 @@ main {
 }
 
 .post video, img {
+    z-index: 1;
     width: 100%;
 }
 
 .post p {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 600;
     width: 95%;
     margin: 20px 10px 40px;
 }
@@ -70,10 +121,10 @@ main {
 }
 
 .like-button {
-    width: 70px;
-    height: 50px;
+    width: 60px;
+    height: 40px;
     padding: 0;
-    border-radius: 15px;
+    border-radius: 15%;
     background-color: #e4eff8;
 }
 
@@ -81,10 +132,15 @@ main {
     width: 100%;
     height: 100%;
     outline: none;
-    border-radius: 15px;
-    border: 1px solid #e4eff8;
-    background: url('res/media/like.png') no-repeat center;
+    border: none;
+    border-radius: 15%;
+
+    background-image: url('../media/like.png');
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: 50%;
+    background-color: rgba(0,0,0,0);
+    filter: invert();
 }
 
 .like-button:focus {
@@ -97,58 +153,9 @@ main {
 }
 
 .like-counter {
-    font-size: 16px;
+    font-family: 'Heebo', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
     margin: auto;
     text-align: center;
-}
-
-header {
-    width: 100%;
-    height: 120px;
-    padding: 0 30px;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #ffffff;
-}
-
-.img-logo, .img-profile {
-    width: 100px;
-    height: 100px;
-}
-
-.img-profile {
-    border-radius: 50%;
-}
-
-.search-container {
-    flex-basis: 60%;
-}
-
-.search-container input[type=text] {
-    width: 80%;
-    height: 80px;
-    padding: 20px;
-    font-size: 28px;
-    border: thin solid #dcdcdc;
-    background-color: rgb(245, 240, 240);
-}
-
-.search-container button {
-    width: 20%;
-    height: 80px;
-    padding: 4px;
-    font-size: 28px;
-    font-weight: 500;
-    float: right;
-    border: none;
-    color: #ffffff;
-    background-color: #1e90ff;
-    border-top-right-radius: 5%;
-    border-bottom-right-radius: 5%;
-}
-
-.search-container button:hover {
-    background: rgb(0, 124, 248);
 }
