--- a/res/css/login.css
+++ b/res/css/login.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 
 *{
+	scroll-behavior: smooth;
 	font-family: 'Quicksand', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -25,6 +28,8 @@ body {
 	padding: 40px 15px 50px 15px;
 	border-radius: 5px;
 	background-color: #ffffff;
+
+	box-shadow: 0 0 50px #2b2b2b;
 }
 
 h1,
@@ -131,9 +136,5 @@ input:hover {
 		padding-right: 0;
 		padding-left: 0;
 		margin: 0 10px;
-	}
-
-	img {
-		display: none;
 	}
 }
