--- a/res/css/index.css
+++ b/res/css/index.css
@@ -18,6 +18,7 @@ html, body, main {
     -webkit-font-smoothing: antialiased;
 }
 
+/*Use flexbox to arrange layout*/
 header {
     width: 100%;
     height: 60px;
@@ -51,7 +52,8 @@ header {
     background-color: white;
 }
 
-.search-container button {
+/*Use a General Sibling Selector (eg: div ~ p)*/
+.search-container label ~ button {
     width: 15%;
     height: 40px;
     padding: 0;
@@ -95,14 +97,16 @@ main {
     float: left;
 }
 
-.time {
+/*Use an Adjacent Sibling Selector (eg: div + p)*/
+.img-profile + div {
     width: 100%;
     font-size: 16px;
     color: gray;
     text-align: end;
 }
 
-.post video, img {
+/*Use a Child Selector (eg: div > p)*/
+.post > video, img {
     z-index: 1;
     width: 100%;
 }
