--- a/res/css/index.css
+++ b/res/css/index.css
@@ -1,92 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700');
-
-* {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-family: 'Quicksand', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-    margin: 0;
-    background-color: dodgerblue;
-}
-
-html, body, main {
-    height: 100%;
-    margin: 0;
-    overflow: auto;
-}
-
-main {
-    width: 60%;
-    margin: auto;
-    padding-top: 100px;
-    background-color: white;
-
-    box-shadow: 0 0 100px #2b2b2b;
-}
-
-/*Use flexbox to arrange layout*/
-header {
-    width: 100%;
-    height: 60px;
-    padding: 0 30px;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 3;
-
-    background-color: #ffffff;
-    box-shadow: 0 0 15px #9b9b9b;
-}
-
-.search-container {
-    flex-basis: 50%;
-}
-
-.img-logo, .img-profile {
-    width: 40px;
-}
-
-.img-profile {
-    border-radius: 50%;
-}
-
-.search-container input[type=text] {
-    width: 85%;
-    height: 40px;
-
-    font-size: 14px;
-    padding: 0 20px;
-    border: thin solid #dcdcdc;
-    background-color: white;
-}
-
-/*Use a General Sibling Selector (eg: div ~ p)*/
-.search-container label ~ button {
-    width: 15%;
-    height: 40px;
-    padding: 0;
-
-    font-size: 14px;
-    font-weight: 600;
-    float: right;
-    border: none;
-    color: #ffffff;
-    background-color: #1b9fd8;
-    border-top-right-radius: 5%;
-    border-bottom-right-radius: 5%;
-}
-
-.search-container button:hover {
-    background: rgb(0, 124, 248);
-}
-
-
 .post {
     display: block;
     width: 80%;
@@ -97,20 +8,22 @@ header {
 }
 
 .post-top {
-    padding: 0 10px 30px;
+    padding: 0 10px 10px;
 }
 
-.post-top .img-profile {
-    float: left;
+.profile-name{
+    font-size: 16px;
+    font-weight: 500;
 }
 
 /*Use an Adjacent Sibling Selector (eg: div + p)*/
-.img-profile + div {
+.profile-name + div {
     width: 100%;
     font-size: 16px;
     color: gray;
     text-align: end;
 }
+
 
 /*Use a Child Selector (eg: div > p)*/
 .post > video, img {
@@ -122,13 +35,13 @@ header {
     font-size: 24px;
     font-weight: 600;
     width: 95%;
-    margin: 20px 10px 40px;
+    margin: 20px 10px 30px;
 }
 
 .like {
     display: inline-block;
     width: auto;
-    margin-left: 10px;
+    margin: 10px 0 0 10px;
 }
 
 .like-button {
