--- a/res/css/main.css
+++ b/res/css/main.css
@@ -122,6 +122,7 @@ header .img-profile:hover{
     position: fixed;
     top: 60px;
     right: 0;
+    z-index: 3;
     padding:25px 25px 0 0;
 
     background-color: #fff;
